--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=5000
+PORT=80
 
-DATABASE_URL=mongodb://localhost:27017/quiz-mern
+DATABASE_URL='mongodb+srv://eseuser:lapass@cluster0-c282b.mongodb.net/test?retryWrites=true&w=majority'
